--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
+body,
+main,
+button {
+  font-family: 'Russo One', sans-serif;
+}
 main {
   margin: 0;
   padding: 0;
